#112, #131: Minor adaptations for consistency
- Rename 'ClearMarkersAction' to 'DeleteMarkersAction' for consistency
- Add missing arguments to 'SetEditValidationResultAction'
- Rename 'connectionElementId' to 'edgeElementId' for consistency
- Remove 'ExportSVGAction' from default handling
- Remove 'ExecuteServerCommandAction' and corresponding infrastructure
- Remove 'simulate-command' from Workflow example and 'command' in icon
- Update compliance level of generated code and ignore warnings for it
- Checkstyle: Allow any content after first copyright-line

Part of https://github.com/eclipse-glsp/glsp/issues/112
Part of https://github.com/eclipse-glsp/glsp/issues/131

Signed-off-by: Martin Fleck <mfleck@eclipsesource.com>